<resources>
    <string name="app_name">GPSFit</string>

    <!--UI-->
    <string name="main_title">GPS Fit</string>
    <string name="track_title">Track information</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="elapsed_time_tv">Elapsed time</string>
    <string name="name">Name</string>
    <string name="ave_speed">Ave Speed</string>
    <string name="start_time">Start Time</string>
    <string name="save">Save</string>
    <string name="distance">Distance</string>

    <!--Broadcast message-->
    <string name="GPSService">GPS Service</string>
    <string name="Longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string name="Speed">Speed</string>
    <string name="ElapsedTime">Elapsed</string>
    <string name="StartedTime">StartTime</string>

    <!--Broadcast service-->
    <string name="LocationUpdateService">com.ru.gpsfit.location</string>
    <string name="IsLocation">IsLocation</string>
    <string name="title_activity_track">TrackActivity</string>

    <string name="FitData">FitData</string>

    <!--Mesage types-->
    <string name="MessageTypes">MessageTypes</string>
    <string name="LocationMsg">Location</string>
    <string name="ElpasedMsg">Elpased</string>
    <string name="FitDataMsg">FitData</string>

    <!--Key values-->
    <string name="key_distance">distance</string>
    <string name="key_elapsed_time">elapsed_time</string>
    <string name="key_started_time">started_time</string>
    <string name="key_ended_time">ended_time</string>
    <string name="key_avg_speed">avg_speed</string>
    <string name="key_gps_data">gps_data</string>
    <string name="key_name">name</string>

    <!--Toast messages-->
    <string name="toast_GPS_requirement">GPSFit cannot use without GPS permission</string>
    <string name="toast_no_track_data">Could not retrieve track data!</string>
</resources>
